Fix button layout and container height on small screens
When buttons flex wrapped there was no margin top for lower
button. Add flex row-gap to container

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 .container {
     /* min-height: 100vh */
     /* padding-bottom: 6rem; */
-    min-height: 300px;
+    min-height: 480px;
 }
 
 html {
@@ -19,8 +19,8 @@ body {
     flex-grow: 1;
 }
 
-#roundContainer {
-    /* flex-grow: 1; */
+#buttons {
+    row-gap: 15px
 }
 
 .hide {
